Added accordian to template page

--- a/home/HomePage.html
+++ b/home/HomePage.html
@@ -83,7 +83,7 @@ https://stackoverflow.com/questions/42635126/bootstrap-4-navbar-with-2-rows
           <a class="nav-link" href="../Contact/contact.html">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link"  id="loginToggle">Login</a>
+          <a class="nav-link" id="loginToggle">Login</a>
         </li>
       </ul>
     </div>
@@ -133,18 +133,20 @@ https://stackoverflow.com/questions/42635126/bootstrap-4-navbar-with-2-rows
     </div>
     <div class="form-group">
       <label for="key">Password:</label>
-      <input type="password" class="form-control" id="key" placeholder="Enter password" name="key" encrypt="bcrypt" salt="abc..." rounds="4" required>
+      <input type="password" class="form-control" id="key" placeholder="Enter password" name="key" encrypt="bcrypt"
+        salt="abc..." rounds="4" required>
       <!--defines type of input, id, placeholder and requires user to make input-->
     </div>
     <button type="submit" id="btnSubmitLogin" class="btn btn-primary">Submit</button>
     <!--submit button-->
     </form>
   </div>
+
   <!--defines footer-->
   <div id="footer">
     <footer>This is the footer</footer>
   </div>
-  
+
 </body>
 
 </html>
