--- a/home/HomePage.html
+++ b/home/HomePage.html
@@ -142,6 +142,28 @@ https://stackoverflow.com/questions/42635126/bootstrap-4-navbar-with-2-rows
     </form>
   </div>
 
+  <div class="container" id="Home">
+    Home div "page"
+  </div>
+  <div class="container" id="Categories">
+    categories "page"
+  </div>
+  <div class="container" id="HotDeals">
+    hot deals page
+  </div>
+  <div class="container" id="StoreLocator">
+    store locator page
+  </div>
+  <div class="container" id="Contact">
+    contact us details "page"
+  </div>
+  <div class="container" id="Admin">
+    Admin "page"
+  </div>
+
+
+
+
   <!--defines footer-->
   <div id="footer">
     <footer>This is the footer</footer>
