--- a/CatTemplate/catTemplate.html
+++ b/CatTemplate/catTemplate.html
@@ -115,11 +115,16 @@
     <p>Cat 2</p>
   </div>
    -->
+  <div id="categoryName" >    
+      categoryName
+  </div>
    
-  <div class="container">
+
+
+  <div class="container" style="display:none;" >
     <div class="row">
       <div class="col-sm">
-        <ul class="list-unstyled" id="categoryPageCategoriesList">          
+        <ul class="list-unstyled" id="categoryPageCategoriesList">     
         </ul>
       </div>
       <div class="col-sm categoryDisplayText" id="categoryDiv">
@@ -132,6 +137,11 @@
   <script>
 
     $(document).ready(function () {
+/*
+  load this page with the category 
+  
+*/
+
 
       // var acc = $(".accordion");//document.getElementsByClassName("accordion").;
       // var i;
