--- a/Login/crud.html
+++ b/Login/crud.html
@@ -17,7 +17,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <!-- <script src="../js/data.js"></script> -->
-  <script src="../js/main.js"></script>
+  <!-- <script src="../js/main.js"></script> -->
+  <script src="../js/lib/indexeddb.js"></script>
   <!-- <script src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" 
   crossorigin="anonymous"></script> -->
