--- a/Map/EventList/EventList.html
+++ b/Map/EventList/EventList.html
@@ -94,19 +94,13 @@ https://stackoverflow.com/questions/42635126/bootstrap-4-navbar-with-2-rows
     </div>
   </nav>
 
-  <h1>Create Events</h1>
-  <form id="formInsertEvent">
-      Event Date:
-      <input type="date" id="dateEvent"> </br></br>
-      Select event location in Map:</br>
+  <h1>Event List</h1>
 
       <!--placeholder for Google Map, javascript loads map-->
-      <div id="mapInput" style="width: 650px; height: 300px;"></div> </br>
+      <div id="mapInput" style="width: 650px; height: 300px;"></div>
 
-      <input type="submit" id="btnSubmit">
-
-      <script src="InsertEvent.js"></script>
-      <script src="InsertEventDAO.js"></script>
+      <script src="EventList.js"></script>
+      <script src="EventListDAO.js"></script>
 
   </form>
 
