main.js not in effect

--- a/Login/crud.html
+++ b/Login/crud.html
@@ -180,8 +180,8 @@ https://stackoverflow.com/questions/42635126/bootstrap-4-navbar-with-2-rows
   <script src="../js/AddFunc/AddItemDAO.js"></script>
   <script src="../js/ListFunc/ListItems.js"></script>
   <script src="../js/ListFunc/ListItemsDAO.js"></script>
-  <!-- <script src="../js/UpdateFunc/UpdateItem.js"></script>
-  <script src="../js/UpdateFunc/UpdateItemDAO.js"></script> -->
+  <script src="../js/UpdateFunc/UpdateItem.js"></script>
+  <script src="../js/UpdateFunc/UpdateItemDAO.js"></script>
   <script src="../js/AddCat/AddCategory.js"></script>
   <!-- <script src="../js/crudFunctions.js"></script> -->
 
