--- a/Login/crud.html
+++ b/Login/crud.html
@@ -17,7 +17,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <!-- <script src="../js/data.js"></script> -->
-  <!-- <script src="../js/main.js"></script> -->
+  <script src="../js/main.js"></script>
   <script src="../js/lib/indexeddb.js"></script>
   <!-- <script src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" 
@@ -180,8 +180,8 @@ https://stackoverflow.com/questions/42635126/bootstrap-4-navbar-with-2-rows
   <script src="../js/AddFunc/AddItemDAO.js"></script>
   <script src="../js/ListFunc/ListItems.js"></script>
   <script src="../js/ListFunc/ListItemsDAO.js"></script>
-  <script src="../js/UpdateFunc/UpdateItem.js"></script>
-  <script src="../js/UpdateFunc/UpdateItemDAO.js"></script>
+  <!-- <script src="../js/UpdateFunc/UpdateItem.js"></script>
+  <script src="../js/UpdateFunc/UpdateItemDAO.js"></script> -->
   <script src="../js/AddCat/AddCategory.js"></script>
   <!-- <script src="../js/crudFunctions.js"></script> -->
 
