updated link to indexeddb js file

--- a/home/HomePage.html
+++ b/home/HomePage.html
@@ -18,6 +18,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <!-- <script src="../js/data.js"></script> -->
   <script src="../js/main.js"></script>
+  <script src="../js/lib/indexeddb.js"></script>
 
 
   <title>Catalogue Website</title>
