--- a/Map/InsertEvent.html
+++ b/Map/InsertEvent.html
@@ -17,13 +17,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <!-- <script src="../js/data.js"></script> -->
-    <script src="../js/main.js"></script>
     <!-- <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script> -->
     <!-- <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script> -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB6QCGqF325m9QTLFst-qHTbE1lUaePKHY"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.js"
         integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous">
-        </script>
+    </script>
+    <script src="../js/main.js"></script>
+    <script src="../js/lib/indexeddb.js"></script>
     <style>
         #mapInput {
             width: auto;
@@ -94,7 +95,7 @@ https://stackoverflow.com/questions/42635126/bootstrap-4-navbar-with-2-rows
                 </li>
                 <li class="nav-item">
                     <!--link to store locator page-->
-                    <a class="nav-link" href="../Store Locator/stores.html">Store Locator</a>
+                    <a class="nav-link" href="../Map/EventList/EventList.html">Store Locator</a>
                 </li>
                 <li class="nav-item">
                     <!--link to contact page-->
