--- a/home/HomePage.html
+++ b/home/HomePage.html
@@ -77,7 +77,7 @@ https://stackoverflow.com/questions/42635126/bootstrap-4-navbar-with-2-rows
         </li>
         <li class="nav-item">
           <!--link to store locator page-->
-          <a class="nav-link" href="../Store Locator/stores.html">Store Locator</a>
+          <a class="nav-link" href="../Map/EventList/EventList.html">Store Locator</a>
         </li>
         <li class="nav-item">
           <!--link to contact page-->
