--- a/Login/crud.html
+++ b/Login/crud.html
@@ -2,77 +2,38 @@
 <html lang="en-gb">
 
 <head>
-  <meta name="description" content="catalogue and shopping website">
-  <!--helps search engines define what the purpose of the site is-->
-  <meta name="keywords" content="shopping, search, catalogue">
-  <meta charset="utf-8">
-  <!--defines correct character set-->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--ensures site will render correctly on all platforms, primarily mobile-->
+    <meta name="description" content="catalogue and shopping website">
+    <!--helps search engines define what the purpose of the site is-->
+    <meta name="keywords" content="shopping, search, catalogue">
+    <meta charset="utf-8">
+    <!--defines correct character set-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--ensures site will render correctly on all platforms, primarily mobile-->
 
-  <!--links to the Boostrap CDN-->
-  <link rel="stylesheet" href="../css/styles.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <!-- <script src="../js/data.js"></script> -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB6QCGqF325m9QTLFst-qHTbE1lUaePKHY"></script>
-  <script src="https://code.jquery.com/jquery-3.2.1.js"
-      integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous">
-  </script>
-  <script src="../js/main.js"></script>
-  <script src="../js/lib/indexeddb.js"></script>
-  <!-- <script src="https://code.jquery.com/jquery-3.4.1.js"
+    <!--links to the Boostrap CDN-->
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!-- <script src="../js/data.js"></script> -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB6QCGqF325m9QTLFst-qHTbE1lUaePKHY"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous">
+    </script>
+    <script src="../js/main.js"></script>
+    <script src="../js/lib/indexeddb.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" 
   crossorigin="anonymous"></script> -->
 
-  <title>Catalogue Website</title>
-  <!--title of site-->
-  
-  <style>
-  .accordion {
-  background-color: #eee;
-  color: #444;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
-  transition: 0.4s;
-}
-
-.active, .accordion:hover {
-  background-color: #ccc; 
-}
-
-.panel {
-  padding: 0 18px;
-  display: none;
-  background-color: white;
-  overflow: hidden;
-}
-
-#mapInput {
-  width: auto;
-  height: 450px;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-  margin: auto;
-  border: 10px solid;
-  border-color: rgb(0, 0, 0);
-  }
-</style>
+    <!--title of site-->
+    <title>Catalogue Website</title>
 
 </head>
 
 <body>
 
-  <!--
+    <!--
   references 
   https://stackoverflow.com/questions/42635126/bootstrap-4-navbar-with-2-rows
 
@@ -85,152 +46,153 @@
 
 
     -->
-  <!--creates search bar form-->
+    <!--creates search bar form-->
 
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <!--makes navbar dark and controls spacing of items-->
-    <a class="navbar-brand" href="../home/HomePage.html">Logo</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <!--makes navbar dark and controls spacing of items-->
+        <a class="navbar-brand" href="../home/HomePage.html">Logo</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <!--defines type of navbar-->
-        <li class="nav-item active">
-          <div id="search" class="">
-            <form class="form-inline" action="../Search/results.html">
-              <input class="form-control mr-sm-2" type="text" placeholder="Search">
-              <button class="btn btn-success" type="submit">Search</button>
-            </form>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../home/HomePage.html">Home</a>
-        </li>
-        <li class="nav-item dropdown">
-          <!--creates dropdown-->
-          <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Categories</a>
-          <!--name and type of dropdown-->
-          <div id="dropdown" class="dropdown-menu"></div>
-        </li>
-        <li class="nav-item">
-          <!--link to hot deals page-->
-          <a class="nav-link" href="../Hot Deals/deals.html">Hot Deals</a>
-        </li>
-        <li class="nav-item">
-          <!--link to store locator page-->
-          <a class="nav-link" href="../Map/EventList/EventList.html">Store Locator</a>
-        </li>
-        <li class="nav-item">
-          <!--link to contact page-->
-          <a class="nav-link" href="../Contact/contact.html">Contact</a>
-        </li>
-        <li class="nav-item">
-          <!--button for login popup-->
-          <a class="nav-link" id="loginToggle">Login</a>
-        </li>
-      </ul>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <!--defines type of navbar-->
+                <li class="nav-item active">
+                    <div id="search" class="">
+                        <form class="form-inline" action="../Search/results.html">
+                            <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                            <button class="btn btn-success" type="submit">Search</button>
+                        </form>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../home/HomePage.html">Home</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <!--creates dropdown updated from indexeddb-->
+                    <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Categories</a>
+                    <!--name and type of dropdown-->
+                    <div id="dropdown" class="dropdown-menu"></div>
+                </li>
+                <li class="nav-item">
+                    <!--link to hot deals page-->
+                    <a class="nav-link" href="../Hot Deals/deals.html">Hot Deals</a>
+                </li>
+                <li class="nav-item">
+                    <!--link to store locator page-->
+                    <a class="nav-link" href="../Map/EventList/EventList.html">Store Locator</a>
+                </li>
+                <li class="nav-item">
+                    <!--link to contact page-->
+                    <a class="nav-link" href="../Contact/contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <!--button for login popup-->
+                    <a class="nav-link" id="loginToggle">Login</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+
     </div>
-  </nav>
-
-
-  </div>
-  <!--creates login form-->
-  <div id="login" class="container">
-    <form action="../Login/login.html" id="loginForm">
-      <div class="form-group">
-        <label for="email">Email:</label>
-        <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
-        <!--defines type of input, id, placeholder and requires user to make input-->
-      </div>
-      <div class="form-group">
-        <label for="key">Password:</label>
-        <input type="password" class="form-control" id="key" placeholder="Enter password" name="key" required>
-        <!--defines type of input, id, placeholder and requires user to make input-->
-      </div>
-      <button type="submit" id="btnSubmitLogin" class="btn btn-primary">Submit</button>
-      <!--submit button-->
-    </form>
-  </div>
-
-  <h2>Admin Functions</h2>
-
-
-
-  <button class="accordion">Add New Item</button>
-  <div class="panel">
-    <div id='FuncAdd' class="container">
-      <h2> Add item </h2>
-      <form id="formSellItem">
-        <label> Item Name: </label> <br>
-        <input type="text" id="txtItemName" name="itemName" required="required"> <br> <br>
-
-        <label> Description: </label> <br>
-        <input type="text" id="txtDesc" name="Desc" required="required"> <br> <br>
-
-        <label> Price: </label> <br>
-        <input type="int" id="intPrice" name="Price" required="required"> <br> <br>
-
-        <li class="dropdown">
-          <!--creates dropdown-->
-          <a class="dropdown-toggle" href="#" id="catDrop" data-toggle="dropdown">Department</a>
-          <!--name and type of dropdown-->
-          <div id="AdminDrop" class="dropdown-menu"></div>
-        </li>
-
-        <label for="file">Choose item image to upload</label>
-        <input type="file" id="fileItemImage" name="file"> <br> <br>
-
-        <img src="" alt="Image preview..." id="bannerImg"> <br> <br>
-
-        <input type="submit" id="btnSaveItem" value="Save">
-
-      </form>
+    <!--creates login form-->
+    <div id="login" class="container">
+        <form action="../Login/login.html" id="loginForm">
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
+                <!--defines type of input, id, placeholder and requires user to make input-->
+            </div>
+            <div class="form-group">
+                <label for="key">Password:</label>
+                <input type="password" class="form-control" id="key" placeholder="Enter password" name="key" required>
+                <!--defines type of input, id, placeholder and requires user to make input-->
+            </div>
+            <button type="submit" id="btnSubmitLogin" class="btn btn-primary">Submit</button>
+            <!--submit button-->
+        </form>
     </div>
 
-    <div id="divItemList" class="container">
-      <h2> Item List </h2>
-    </div>
-  </div>
+    <h2>Admin Functions</h2>
 
-  <button class="accordion">Add New Category</button>
-  <div class="panel">
-    <div id="AddCatFunc" class="container">
-      <h2> Add Category </h2>
-      <form id="formAddCat">
-        <label> Category Name: </label> <br>
-        <input type="text" id="txtCatName" name="catName" required="required"> <br> <br>
-        <label> Category Description: </label> <br>
-        <input type="text" id="txtCatDesc" name="catDesc" required="required"> <br> <br>
-        <input type="submit" id="btnAddCat" value="Add">
 
-      </form>
-    </div>
-  </div>
 
-  <button class="accordion">Add New Location</button>
+    <button class="accordion">Add New Item</button>
     <div class="panel">
-      <h1>Create Events</h1>
-      <form id="formInsertEvent">
-          Event Date:
-          <input type="date" id="dateEvent"> </br></br>
-          Select event location in Map:</br>
-  
-          <!--placeholder for Google Map, javascript loads map-->
-          <div id="mapInput" style="width: 650px; height: 300px;"></div> </br>
-  
-          <input type="submit" id="btnSubmit">
-  
-          <script src="../Map/InsertEvent.js"></script>
-          <script src="../Map/InsertEventDAO.js"></script>
-  
-      </form>    
+        <div id='FuncAdd' class="container">
+            <h2> Add item </h2>
+            <form id="formSellItem">
+                <label> Item Name: </label> <br>
+                <input type="text" id="txtItemName" name="itemName" required="required"> <br> <br>
+
+                <label> Description: </label> <br>
+                <input type="text" id="txtDesc" name="Desc" required="required"> <br> <br>
+
+                <label> Price: </label> <br>
+                <input type="int" id="intPrice" name="Price" required="required"> <br> <br>
+
+                <li class="dropdown">
+                    <!--creates dropdown-->
+                    <a class="dropdown-toggle" href="#" id="catDrop" data-toggle="dropdown">Department</a>
+                    <!--name and type of dropdown-->
+                    <div id="AdminDrop" class="dropdown-menu"></div>
+                </li>
+
+                <label for="file">Choose item image to upload</label>
+                <input type="file" id="fileItemImage" name="file"> <br> <br>
+
+                <img src="" alt="Image preview..." id="bannerImg"> <br> <br>
+
+                <input type="submit" id="btnSaveItem" value="Save">
+
+            </form>
+        </div>
+
+        <div id="divItemList" class="container">
+            <h2> Item List </h2>
+        </div>
+    </div>
+
+    <button class="accordion">Add New Category</button>
+    <div class="panel">
+        <div id="AddCatFunc" class="container">
+            <h2> Add Category </h2>
+            <form id="formAddCat">
+                <label> Category Name: </label> <br>
+                <input type="text" id="txtCatName" name="catName" required="required"> <br> <br>
+                <label> Category Description: </label> <br>
+                <input type="text" id="txtCatDesc" name="catDesc" required="required"> <br> <br>
+                <input type="submit" id="btnAddCat" value="Add">
+
+            </form>
+        </div>
+    </div>
+
+    <button class="accordion">Add New Location</button>
+    <div class="panel">
+        <h1>Create Events</h1>
+        <form id="formInsertEvent">
+            Event Date:
+            <input type="date" id="dateEvent"> </br>
+            </br>
+            Select event location in Map:</br>
+
+            <!--placeholder for Google Map, javascript loads map-->
+            <div id="mapInput" style="width: 650px; height: 300px;"></div>
+            </br>
+
+            <input type="submit" id="btnSubmit">
+
+            <script src="../Map/InsertEvent.js"></script>
+            <script src="../Map/InsertEventDAO.js"></script>
+
+        </form>
     </div>
 
 
 
-      <!-- <div id="UpdateFunc" class="container">
+    <!-- <div id="UpdateFunc" class="container">
     <h2> Update Function </h2>
     <form id="formUpdateItem">
       <h3 id="itemID">Item ID</h3>
@@ -247,19 +209,39 @@
     </form>
   </div> -->
 
-      <script src="../js/AddFunc/AddItem.js"></script>
-      <script src="../js/AddFunc/AddItemDAO.js"></script>
-      <script src="../js/ListFunc/ListItems.js"></script>
-      <script src="../js/ListFunc/ListItemsDAO.js"></script>
-      <!-- <script src="../js/UpdateFunc/UpdateItem.js"></script>
+    <script src="../js/AddFunc/AddItem.js"></script>
+    <script src="../js/AddFunc/AddItemDAO.js"></script>
+    <script src="../js/ListFunc/ListItems.js"></script>
+    <script src="../js/ListFunc/ListItemsDAO.js"></script>
+    <!-- <script src="../js/UpdateFunc/UpdateItem.js"></script>
   <script src="../js/UpdateFunc/UpdateItemDAO.js"></script> -->
-      <script src="../js/AddCat/AddCategory.js"></script>
-      <!-- <script src="../js/crudFunctions.js"></script> -->
+    <script src="../js/AddCat/AddCategory.js"></script>
+    <script src="../FileSaver.js-master/dist/FileSaver.min.js"></script>
+    <script src="../FileSaver.js-master/dist/FileSaver.min.js.map"></script>
+    <!-- <script src="../js/crudFunctions.js"></script> -->
 
-      <!--defines footer-->
-      <div id="footer">
+    <!--defines footer-->
+    <div id="footer">
         <footer>This is the footer</footer>
-      </div>
+    </div>
+
+    <script>
+        var acc = document.getElementsByClassName("accordion");
+        var i;
+
+        for (i = 0; i < acc.length; i++) {
+            acc[i].addEventListener("click", function() {
+                this.classList.toggle("active");
+                var panel = this.nextElementSibling;
+                if (panel.style.display === "block") {
+                    panel.style.display = "none";
+                } else {
+                    panel.style.display = "block";
+                }
+            });
+        }
+    </script>
+
 </body>
 
 </html>
