Created listCat page to work on template page

--- a/Login/crud.html
+++ b/Login/crud.html
@@ -216,8 +216,8 @@
     <!-- <script src="../js/UpdateFunc/UpdateItem.js"></script>
   <script src="../js/UpdateFunc/UpdateItemDAO.js"></script> -->
     <script src="../js/AddCat/AddCategory.js"></script>
-    <script src="../FileSaver.js-master/dist/FileSaver.min.js"></script>
-    <script src="../FileSaver.js-master/dist/FileSaver.min.js.map"></script>
+    <!-- <script src="../FileSaver.js-master/dist/FileSaver.min.js"></script>
+    <script src="../FileSaver.js-master/dist/FileSaver.min.js.map"></script> -->
     <!-- <script src="../js/crudFunctions.js"></script> -->
 
     <!--defines footer-->
