--- a/CatTemplate/catTemplate.html
+++ b/CatTemplate/catTemplate.html
@@ -2,111 +2,108 @@
 <html lang="en-gb">
 
 <head>
-  <meta name="description" content="catalogue and shopping website">
-  <!--helps search engines define what the purpose of the site is-->
-  <meta name="keywords" content="shopping, search, catalogue">
-  <meta charset="utf-8">
-  <!--defines correct character set-->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--ensures site will render correctly on all platforms, primarily mobile-->
+    <meta name="description" content="catalogue and shopping website">
+    <!--helps search engines define what the purpose of the site is-->
+    <meta name="keywords" content="shopping, search, catalogue">
+    <meta charset="utf-8">
+    <!--defines correct character set-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--ensures site will render correctly on all platforms, primarily mobile-->
 
-  <!--links to the Boostrap CDN-->
-  <link rel="stylesheet" href="../css/styles.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!--links to the Boostrap CDN-->
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-  <script src="../js/lib/indexeddb.js"></script>
-  <script src="../js/main.js"></script>
+    <script src="../js/lib/indexeddb.js"></script>
+    <script src="../js/main.js"></script>
 
 
-  <title>Catalogue Website</title>
-  <!--title of site-->
+    <title>Catalogue Website</title>
+    <!--title of site-->
 
-  <style>
-    .categoryDisplayText {
-      border: 1px solid silver;
-      height: 300px;
-      min-width: 500px;
-
-    }
-  </style>
+    <style>
+        .categoryDisplayText {
+            border: 1px solid silver;
+            height: 300px;
+            min-width: 500px;
+        }
+    </style>
 
 </head>
 
 <body>
 
 
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <!--makes navbar dark and controls spacing of items-->
-    <a class="navbar-brand" href="../home/home.html">Logo</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <!--makes navbar dark and controls spacing of items-->
+        <a class="navbar-brand" href="../home/home.html">Logo</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <!--defines type of navbar-->
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <!--creates search bar form-->
-        <li class="nav-item active">
-          <div id="search" class="">
-            <form class="form-inline" action="../Search/results.html">
-              <input class="form-control mr-sm-2" type="text" placeholder="Search">
-              <button class="btn btn-success" type="submit">Search</button>
-            </form>
-          </div>
-        </li>
-        <li class="nav-item">
-          <!--link to home page (null and void on this page but better than an empty button)-->
-          <a class="nav-link" href="../home/HomePage.html">Home</a>
-        </li>
-        <li class="nav-item dropdown">
-          <!--creates dropdown-->
-          <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Categories</a>
-          <!--name and type of dropdown-->
-          <div id="dropdown" class="dropdown-menu"></div>
-        </li>
-        <li class="nav-item">
-          <!--link to hot deals page-->
-          <a class="nav-link" href="../Hot Deals/deals.html">Hot Deals</a>
-        </li>
-        <li class="nav-item">
-          <!--link to store locator page-->
-          <a class="nav-link" href="../Store Locator/stores.html">Store Locator</a>
-        </li>
-        <li class="nav-item">
-          <!--link to contact page-->
-          <a class="nav-link" href="../Contact/contact.html">Contact</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" id="loginToggle">Login</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+        <!--defines type of navbar-->
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <!--creates search bar form-->
+                <li class="nav-item active">
+                    <div id="search" class="">
+                        <form class="form-inline" action="../Search/results.html">
+                            <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                            <button class="btn btn-success" type="submit">Search</button>
+                        </form>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <!--link to home page (null and void on this page but better than an empty button)-->
+                    <a class="nav-link" href="../home/HomePage.html">Home</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <!--creates dropdown-->
+                    <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Categories</a>
+                    <!--name and type of dropdown-->
+                    <div id="dropdown" class="dropdown-menu"></div>
+                </li>
+                <li class="nav-item">
+                    <!--link to hot deals page-->
+                    <a class="nav-link" href="../Hot Deals/deals.html">Hot Deals</a>
+                </li>
+                <li class="nav-item">
+                    <!--link to store locator page-->
+                    <a class="nav-link" href="../Store Locator/stores.html">Store Locator</a>
+                </li>
+                <li class="nav-item">
+                    <!--link to contact page-->
+                    <a class="nav-link" href="../Contact/contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="loginToggle">Login</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-  </div>
-  <!--creates login form-->
-  <div id="login" class="container">
-    <!--<form action="../Login/login.html" id="loginForm"> -->
-    <div class="form-group">
-      <label for="email">Email:</label>
-      <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
-      <!--defines type of input, id, placeholder and requires user to make input-->
     </div>
-    <div class="form-group">
-      <label for="key">Password:</label>
-      <input type="password" class="form-control" id="key" placeholder="Enter password" name="key" encrypt="bcrypt"
-        salt="abc..." rounds="4" required>
-      <!--defines type of input, id, placeholder and requires user to make input-->
+    <!--creates login form-->
+    <div id="login" class="container">
+        <!--<form action="../Login/login.html" id="loginForm"> -->
+        <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
+            <!--defines type of input, id, placeholder and requires user to make input-->
+        </div>
+        <div class="form-group">
+            <label for="key">Password:</label>
+            <input type="password" class="form-control" id="key" placeholder="Enter password" name="key" encrypt="bcrypt" salt="abc..." rounds="4" required>
+            <!--defines type of input, id, placeholder and requires user to make input-->
+        </div>
+        <button type="submit" id="btnSubmitLogin" class="btn btn-primary">Submit</button>
+        <!--submit button-->
+        </form>
     </div>
-    <button type="submit" id="btnSubmitLogin" class="btn btn-primary">Submit</button>
-    <!--submit button-->
-    </form>
-  </div>
 
-  <!-- <button class="accordion">Category 1</button>
+    <!-- <button class="accordion">Category 1</button>
   <div class="panel" id="acc">
     <p>Cat 1</p>
   </div>
@@ -115,17 +112,25 @@
     <p>Cat 2</p>
   </div>
    -->
-  <input type="hidden" id="categoryHiddenField" value="categoryName" />
+    <!-- <input type="hidden" id="categoryHiddenField" value="categoryName" />
 
-  <div id="categoryInformation">
-
-  </div>
-
-  <div id="itemList">
+    <div id="categoryInformation">
 
     </div>
 
-  <!-- <div class="container" style="display:none;" >
+    <div id="itemList">
+
+    </div> -->
+
+    <div id="divItemList" class="container">
+        <h2> Item List </h2>
+    </div>
+
+    <div id="divCatList" class="container">
+        <h2> Category List </h2>
+    </div>
+
+    <!-- <div class="container" style="display:none;" >
     <div class="row">
       <div class="col-sm">
         <ul class="list-unstyled" id="categoryPageCategoriesList">     
@@ -138,7 +143,7 @@
 
 
 
-  <!-- <script>
+    <!-- <script>
 
     $(document).ready(function () {
       /*
@@ -168,11 +173,14 @@
 
   </script> -->
 
+    <script src="../js/ListFunc/ListItems.js"></script>
+    <script src="../js/ListFunc/ListItemsDAO.js"></script>
+    <script src="../js/ListCat/listCat.js"></script>
 
-  <!--defines footer-->
-  <div id="footer">
-    <footer>This is the footer</footer>
-  </div>
+    <!--defines footer-->
+    <div id="footer">
+        <footer>This is the footer</footer>
+    </div>
 </body>
 
 </html>
