dad commit testing on category items

--- a/CatTemplate/catTemplate.html
+++ b/CatTemplate/catTemplate.html
@@ -122,13 +122,14 @@
 
     </div> -->
 
-    <div id="divItemList" class="container">
+    <!-- <div id="divItemList" class="container">
         <h2> Item List </h2>
+    </div> -->
+    <h2> Category List </h2>
+    <div id="divCatList" class="container">        
     </div>
 
-    <div id="divCatList" class="container">
-        <h2> Category List </h2>
-    </div>
+   <!-- <input type="hidden" id="hiddenCategoryItemList" value=""/> -->
 
     <!-- <div class="container" style="display:none;" >
     <div class="row">
@@ -172,10 +173,11 @@
 
 
   </script> -->
-
+  <script src="../js/lib/indexeddb.js"></script>
     <script src="../js/ListFunc/ListItems.js"></script>
     <script src="../js/ListFunc/ListItemsDAO.js"></script>
     <script src="../js/ListCat/listCat.js"></script>
+    
 
     <!--defines footer-->
     <div id="footer">
